--- a/index.html
+++ b/index.html
@@ -9,27 +9,26 @@
       <title>Vivien Nagy Business Card</title>
     </head>
     <body>
-   <div class="profile">
+      <div class="profile">
            <img src="assets/IMG_2337.jpeg">
-
-      <p class="text">hi</p>
+           <h1 class="text">hi</h1>
+           <h1>Vivien Nagy</h1>
+           <p>will be web designer<p>
       </div>
-  <div class="content">
-      <h1>Vivien Nagy</h1>
-      <h2>will be web designer</h2>
+      
       <p>from</p>
       <p><i class="fa fa-map-marker"></i>Budapest, HU</p>
       <p>As a masters diver, I approach with a great many humility and energy to both my work and my private affairs. I like to get into new, creative things. So if you have a similar qualities, please you don't hesitate to search for me.</p>
       <section class="links">
       <h2>Contact me:</h2>
           <ul>
-            <li><i class="fa fa-at" aria-hidden="true"></i></li>
-            <li><i class="fa fa-facebook-square" aria-hidden="true"></i></li>
-            <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
+            <li><a href="mailto:nagyviv4@gmail.com"><i class="fa fa-at" aria-hidden="true"></i></a></li>
+            <li><a href="https://m.facebook.com/nagyvivuska"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+            <li><a href="https://instagram.com/nagyviv4"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
         </ul> 
      </section>
-      </div>
     </body>
   </html>
+  
   
   
